force-app/main/default/objects/WorkOrderLineItem/fields/Deliver_To_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Deliver_To_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TDF Enhance: Added to support connected work</description>
    <label>Deliver To Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Deliver Work Order Line Items</relationshipLabel>
    <relationshipName>Deliver_To_Work_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>