force-app/main/default/objects/WorkOrderLineItem/fields/Skip_Validation__c.field-meta.xml
<CustomField>
    <fullName>Skip_Validation__c</fullName>
    <defaultValue>true</defaultValue>
    <description>A checkbox field to capture if the user has moved the Job in the Gantt Chat.
If the user does not move the Gantt Chat, they will see the error message when they dispatch the jobs from a job duties. 
Once they have moved the job from the Gantt Chat, that means the job is not following any of the validation rules for the Dispatch job dependencies any more.</description>
    <label>Skip Validation</label>
    <type>Checkbox</type>
</CustomField>