force-app/main/default/objects/WorkOrderLineItem/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>AJ TDF Enhance: Added details of related collect and deliver WOs.  Used for non-mobile display.</description>
    <formula>IF(ISBLANK(Collect_From_Work_Order__c),&apos;Deliver to &apos; &amp; Deliver_To_Work_Order__r.Location.Name,
 IF(ISBLANK(Deliver_To_Work_Order__c),&apos;Collect from &apos; &amp; Collect_From_Work_Order__r.Location.Name,
  &apos;Collect from &apos; &amp; Collect_From_Work_Order__r.Location.Name &amp; &apos; &amp; Deliver to &apos; &amp; Deliver_To_Work_Order__r.Location.Name)
) 
&amp; &apos;: &apos;&amp; Product__r.Name  &amp; &apos; (&apos; &amp;  TEXT(Requested_Quantity__c)  &amp; &apos;)&apos;</formula>
    <label>Subject Detail</label>
    <type>Text</type>
</CustomField>